--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "brightfishsoftware/haplomvc" : "*"
+        "brightfishsoftware/haplomvc" : ">=0.1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.0"
