updated composer dependencies

--- a/Config/App.ini
+++ b/Config/App.ini
@@ -1,7 +1,7 @@
 [templates]
 stripHtml = true
 escape = true
-escapeMethod = "escape_html"
+escapeMethod = "escapeHtml"
 encoding = "UTF-8"
 
 [translations]
