added config for sessions

--- a/Config/App.ini
+++ b/Config/App.ini
@@ -2,6 +2,7 @@
 stripHtml = true
 escape = true
 escapeMethod = "escapeHtml"
+convertEntities = true
 encoding = "UTF-8"
 
 [translations]
@@ -12,6 +13,9 @@ allowShowKeys = false
 [nonce]
 name = "nonce"
 secret = "1234567"
+
+[sessions]
+name = "HaploMvc"
 
 [logging]
 logErrors = true
